<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Circuit</string>
    <string name="user_name">Username</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="block_user">Block User</string>
    <string name="login">Login</string>
    <string name="uyscuti">UY SCUTI Technologies</string>
    <string name="register">Register</string>
    <string name="loginSuggestion">Already have an account?</string>
    <string name="registerSuggestion">Don\'t have an account?</string>
    <string name="image_item">Image Item</string>
    <string name="calls">Hello from calls fragment</string>
    <string name="groups">Hello from group chats fragment</string>
    <string name="persinal">Hello from personal chats  fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_fragment">Hello chat</string>
    <string name="feed_fragment">Hello from feeds</string>
    <string name="shots_fragment">Hello from shots</string>
    <string name="default_repost_hashtags">#Repost #ProudMoment #Innovation</string>
    <string name="default_user_name">User</string>
    <string name="default_user_handle">user</string>
    <string name="repost_button_text">Repost</string>
    <string name="repost_title">Repost</string>
    <string name="add_comment_hint">Add a comment</string>
    <string name="unknown_user">Unknown User</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">{count}m ago</string>
    <string name="hours_ago">{count}h ago</string>
    <string name="days_ago">{count}d ago</string>
    <string name="weeks_ago">{count}w ago</string>
    <string name="please_add_content">Please add some content to repost</string>
    <string name="repost_success">Repost created successfully!</string>
    <string name="repost_failed">Failed to create repost. Please try again.</string>
    <string name="attach_image_clicked">Attach Image clicked</string>
    <string name="attach_gif_clicked">Attach GIF clicked</string>
    <string name="create_poll_clicked">Create Poll clicked</string>
    <string name="emoji_picker_clicked">Emoji Picker clicked</string>
    <string name="schedule_post_clicked">Schedule Post clicked</string>
    <string name="more_options_clicked">More Options clicked</string>
    <string name="original_post_clicked">Original Post clicked</string>
    <string name="view">View</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="hint_enter_a_message">Message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string name="content_description_share">Share</string>
    <string name="content_description_delete">Delete Chat Dialog</string>
    <string name="content_description_more">More</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_group_settings">GroupSettingsActivity</string>
    <string name="close">Close</string>
    <string name="advertising_service_icon">Advertising Service Icon</string>
    <string name="advertising_service_agreement">Advertising Service Agreement</string>
    <string name="welcome_to_our_advertising_platform">Welcome to our Advertising Section</string>
    <string name="by_using_our_advertising_services_you_agree_to_promote_your_products_and_services_on_our_platform_s_feed_reaching_millions_of_engaged_users">By using our advertising services, you agree to promote your products and services on our platform\'s feed, reaching millions of engaged users.</string>
    <string name="payment_requirements">Payment Requirements</string>
    <string name="all_advertising_campaigns_require_payment_before_activation_n_minimum_campaign_budget_50_usd_n_payment_methods_credit_debit_card_paypal_bank_transfer_n_charges_are_non_refundable_once_campaign_is_live_n_billing_occurs_at_campaign_start_or_monthly_for_ongoing_campaigns">• All advertising campaigns require payment before activation\n• Minimum campaign budget: MWK 2000\n• Payment methods: Credit/Debit card, Mobile money transfer, Bank transfer\n• Charges are non-refundable once campaign is live\n• Billing occurs at campaign start and runs for the period of time, paid for</string>
    <string name="service_terms">Service Terms</string>
    <string name="your_ads_will_appear_in_users_feeds_based_on_targeting_criteria_n_we_reserve_the_right_to_reject_ads_that_violate_our_policies_n_ad_performance_is_not_guaranteed_n_you_retain_all_rights_to_your_ad_content_n_we_may_use_your_ads_for_platform_promotion_examples_n_campaign_can_be_paused_or_cancelled_with_24_hours_notice">• Your ads will appear in users\' feeds based on targeting criteria\n• We reserve the right to reject ads that violate our policies\n• Ad performance is not guaranteed\n• You retain all rights to your ad content\n• We may use your ads for platform promotion examples\n• Campaign can be paused or cancelled with 24 hours notice</string>
    <string name="content_guidelines">Content Guidelines</string>
    <string name="prohibited_content_includes_misleading_claims_adult_content_illegal_products_hate_speech_violent_imagery_or_content_that_infringes_intellectual_property_rights">Prohibited content includes: misleading claims, adult content, illegal products, hate speech, violent imagery, or content that infringes intellectual property rights.</string>
    <string name="i_agree_to_the_terms_and_understand_that_payment_is_required">I agree to the terms and understand that payment is required</string>
    <string name="decline">Decline</string>
    <string name="accept_amp_continue"><![CDATA[Accept & Continue]]></string>
    <string name="send_your_offer">Send Your Offer</string>
    <string name="make_an_offer_to_the_seller_they_ll_review_and_respond_soon">Make an offer to the seller. They\'ll review and respond soon.</string>
    <string name="enter_amount">Enter amount</string>
    <string name="your_offer_amount">Your Offer Amount</string>
    <string name="quick_offers">Quick Offers</string>
    <string name="message_to_seller_optional">Message to Seller (Optional)</string>
    <string name="add_a_message">Add a message...</string>
    <string name="cancel">Cancel</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="the_seller_will_be_notified_of_your_offer">The seller will be notified of your offer</string>
    <string name="no_bookmarks">No bookmarks icon</string>
    <string name="no_bookmarks_title">No Bookmarks Yet</string>
    <string name="no_bookmarks_message">Posts you bookmark will appear here</string>
    <string name="private_favorites_icon">Private favorites icon</string>
    <string name="private_favorites_title">Favorites are Private</string>
    <string name="private_favorites_message">Only you can see your bookmarked posts</string>
</resources>