<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy_"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/action_copy"
        app:showAsAction="always" />

    <item android:id="@+id/menu_video"
        android:icon="@drawable/ic_camera_on"
        android:title="@string/video_call"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_voice"
        android:icon="@drawable/baseline_call_24"
        android:title="@string/voice_call"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_block"
        android:icon="@drawable/baseline_block_24"
        android:title="@string/block_user"
        app:showAsAction="never"/>

</menu>